@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.10 2004/04/28 11:27:54 uebayasi Exp $
+# $NetBSD: Makefile,v 1.11 2004/06/14 03:16:43 uebayasi Exp $
 #
 
 DISTNAME=	priv-1.0-beta2
 PKGNAME=	priv-1.0beta2
+PKGREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	ftp://ftp.thistledown.com.au/pub/simonb/
 
@@ -14,6 +15,8 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 USE_BUILDLINK3=	YES
 GNU_CONFIGURE=	YES
 USE_PKGINSTALL=	YES
+
+CONFIGURE_ARGS+=--sysconfdir=${PKG_SYSCONFDIR}
 
 OWN_DIRS=	${PKG_SYSCONFDIR}/priv
 
