@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6207 2004/06/13 14:11:42 tron Exp $
+$NetBSD: CHANGES,v 1.6208 2004/06/14 03:16:42 uebayasi Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2939,3 +2939,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated mew to 2.3nb2 [taca 2004-06-13]
 	Updated nbsed to 20040613 [grant 2004-06-13]
 	Updated milter-greylist to 1.4 [tron 2004-06-13]
+	Updated priv to 1.0beta2nb1 [uebayasi 2004-06-14]
